--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Qunkong 运维管理平台</title>
   </head>
   <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
